2019-08-09  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.16.0

	* NEWS.md: Update for Ensmallen release 1.16.0

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.16.0
	* inst/include/ensmallen.hpp: ditto

2019-05-20  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.15.0

	* NEWS.md: Update for Ensmallen release 1.15.0

	* inst/include/ensmallen_bits/spsa: Removed unused `shuffle` parameter.

	* inst/include/ensmallen_bits/qhadam/qhadam_update: Reorder parameter initialization.

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.15.0
	* inst/include/ensmallen.hpp: ditto

2019-05-12  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.14.4

	* NEWS.md: Update for Ensmallen release 1.14.4

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.14.4
	* inst/include/ensmallen.hpp: ditto

2019-03-09  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.14.1

	* NEWS.md: Update for Ensmallen release 1.14.1

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.14.1
	* inst/include/ensmallen.hpp: ditto

2019-01-20  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.13.0

	* NEWS.md: Update for Ensmallen release 1.13.0

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.13.0
	* inst/include/ensmallen.hpp: ditto

2018-12-30  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.12.0

	* NEWS.md: Update for Ensmallen release 1.12.0

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.12.0
	* inst/include/ensmallen.hpp: ditto

	* inst/CITATION: Updated to ensmallen's NIPS paper

2018-11-30  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version, Date): Release 1.11.1

	* NEWS.md: Update for Ensmallen release 1.11.1

	* inst/include/ensmallen_bits: Upgraded to Ensmallen 1.11.1
	* inst/include/ensmallen.hpp: ditto
