@@ -45,14 +45,14 @@ namespace ens {
  *    publisher = {{IEEE}},
  *    author = {J. Kennedy and R. Eberhart},
  *    title = {Particle swarm optimization},
- *    booktitle = {Proceedings of {ICNN}{\textquotesingle}95 - 
+ *    booktitle = {Proceedings of {ICNN}{\textquotesingle}95 -
  *                 International Conference on Neural Networks}
  * }
  *
  * PSO can optimize arbitrary functions. For more details, see the documentation
  * on function types included with this distribution or on the ensmallen
  * website.
- * 
+ *
  * For PSO to work, the function being optimized must implement an
  * ArbitraryFunctionType template parameter. The respective class must implement
  * the following function:
@@ -159,16 +159,16 @@ class PSOType
   size_t& NumParticles() { return numParticles; }
 
   //! Retrieve value of lowerBound.
-  size_t LowerBound() const { return lowerBound; }
+  arma::vec LowerBound() const { return lowerBound; }
 
   //! Modify value of lowerBound.
-  size_t& LowerBound() { return lowerBound; }
+  arma::vec& LowerBound() { return lowerBound; }
 
   //! Retrieve value of upperBound.
-  size_t UpperBound() const { return upperBound; }
+  arma::vec UpperBound() const { return upperBound; }
 
   //! Modify value of upperBound.
-  size_t& UpperBound() { return upperBound; }
+  arma::vec& UpperBound() { return upperBound; }
 
   //! Retrieve value of maxIterations.
   size_t MaxIterations() const { return maxIterations; }
